feat: update meta tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://avatars.githubusercontent.com/u/161864106?s=200&v=4" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="description" content="Chill and Cozy Fanbase of JKT48V">
+    <meta property="og:description" content="Chill and Cozy Fanbase of JKT48V">
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/161864106?s=200&v=4">
+    <meta property="og:site_name" content="wargavi48.github.io">
+    <meta name="og:title" content="wargavi48.github.io - Chill and Cozy Fanbase of JKT48V">
+    <meta name="twitter:title" content="wargavi48.github.io">
+    <meta name="twitter:site" content="wargavi48.github.io">
+    <meta name="creator" content="Tomato">
+    <meta name="twitter:creator" content="@maliefrr">
+    <meta name="twitter:text:title" content="Wargavi48.github.io - Chill and Cozy Fanbase of JKT48V">
     <title>Wargavi 48</title>
   </head>
   <body>
